contacts: button shake fix; missing space on js fixed; log-in: width on scale fix;

--- a/style/contacts-media-query.css
+++ b/style/contacts-media-query.css
@@ -151,6 +151,11 @@
         display: none !important;
     }
 
+    .mobileDelete,
+    .mobileEdit {
+        align-items: center;
+    }
+
     .scrollingContainer {
         margin-top: 0 !important;
     }
